@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4UIXm.hh,v 1.3 1999-04-16 10:05:58 barrand Exp $
+// $Id: G4UIXm.hh,v 1.4 1999-05-11 13:26:29 barrand Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 #ifndef G4UIXm_h
@@ -40,7 +40,7 @@ private:
   G4bool GetHelpChoice(G4int&);
   void ExitHelp();
 private:
-  Widget shell,command,menuBar,text;
+  Widget form,shell,command,menuBar,text;
   RWTValHashDictionary<Widget,G4String> commands;
   static void commandEnteredCallback(Widget,XtPointer,XtPointer);
   static void keyHandler(Widget,XtPointer,XEvent*,Boolean*);
