@@ -1,4 +1,4 @@
-$Id: History,v 1.4 1999-05-07 12:32:56 barrand Exp $
+$Id: History,v 1.5 1999-05-11 13:26:06 barrand Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+head 11th Mai 1999  Guy Barrand
+1) G4UIXm : Linux, correct geometry management of the menubar.
 
 head 06th Mai 1999  Guy Barrand
 1) G4Win32, G4UIWin32 : modifications to compile with Visual-6.0.
